# cpp-shape-triangulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: Triangulator.cpp  Triangulator.hpp  TriangulatorAlgorithmMetadata.hpp  earcut.cpp  earcut.hpp  main.cpp
